pictordec: decode 8bpp images when extra header marker is missing

Fixes ticket #696.

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>